--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "pink-pansy-syntax",
   "theme": "syntax",
-  "version": "1.8.0",
+  "version": "0.0.8",
   "description": "Pink pansy is my jamsy.",
   "keywords": [
-    "light",
+    "pink",
     "syntax"
   ],
   "repository": "https://github.com/unicornrainbow/pink-pansy-syntax",
